--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-I use this Github to upload and save my courses and projects on python.
+I use this repository to upload and save my courses and projects on python.
