--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-I use this repository to upload and save my courses and projects on python.
+This repository stores my work on a custom python program which helps me training my japanese vocabulary
+
+Versions:
+	- 1.x : hard-codedd vocabulary in .py files
+	- 2.x : Use of .csv files and functions
