--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-I use this repository to upload and save my courses and projects on python.
+Basic usage with hard coded vocabulary inside the .py files.
