--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-I use this repository to upload and save my courses and projects on python.
+Some basic update and corrections, nothing really changes.
