--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-I use this repository to upload and save my courses and projects on python.
+Made a script to convert the hard coded vocabulary into .csv files (fiches folder).
+The 2 first modes works but with extended code instead of functions.
