--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-I use this repository to upload and save my courses and projects on python.
+Support for 3rd mode.
+Use of functions for basic menu and randomizer.
