--- a/README
+++ b/README
@@ -1,5 +1,6 @@
-This repository stores my work on a custom python program which helps me training my japanese vocabulary
+This repository stores my work on a custom python program which helps me training my japanese vocabulary.
 
 Versions:
-	- 1.x : hard-codedd vocabulary in .py files
+	- 1.x : hard-coded vocabulary in .py files
 	- 2.x : Use of .csv files and functions
+	- 3.x : Maybe use of object, mariadb database
